--- a/style.css
+++ b/style.css
@@ -13,8 +13,18 @@ body, input, textarea, button {
 
 #app {
   margin: auto;
-  width: 500px;
-  margin-top: 100px;
+}
+@media (max-width: 576px) {
+  #app {
+    width: 80%;
+    margin-top: 40px;
+  }
+}
+@media (min-width: 577px) {
+  #app {
+    width: 500px;
+    margin-top: 100px;
+  }
 }
 
 #generatedPassword {
@@ -61,6 +71,7 @@ body, input, textarea, button {
 .optionRange::-webkit-slider-thumb {
   width: 30px;
   height: 30px;
+  border: none;
   cursor: pointer;
   border-radius: 4px;
   -webkit-appearance: none;
