--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   }
 }
 
+:root {
+  --borderRadius: 4px;
+}
+
 
 body {
   margin: 0;
@@ -50,15 +54,43 @@ body, input, button {
   }
 }
 
+#generatedPasswordWrapper {
+  position: relative;
+}
+
+#generateNewPassword, #copyPassword {
+  top: 20px;
+  width: 30px;
+  height: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  line-height: 30px;
+  user-select: none;
+  text-align: center;
+  position: absolute;
+  text-transform: uppercase;
+  color: var(--bodyTextColor);
+  border-radius: var(--borderRadius);
+  background-color: var(--checkboxSelectedColor);
+}
+
+#copyPassword {
+  right: 60px;
+}
+
+#generateNewPassword {
+  right: 20px;
+}
+
 #generatedPassword {
   width: 100%;
   height: 70px;
   border: none;
   outline: none;
   padding: 0 20px;
-  border-radius: 4px;
   text-align: center;
   color: var(--bodyTextColor);
+  border-radius: var(--borderRadius);
   background-color: var(--checkboxColor);
 }
 
@@ -90,7 +122,7 @@ body, input, button {
   float: left;
   width: 30px;
   height: 30px;
-  border-radius: 4px;
+  border-radius: var(--borderRadius);
   background-color: var(--checkboxColor);
 }
 .optionCheckboxBigTitle {
@@ -120,8 +152,8 @@ body, input, button {
   font-size: 0;
   outline: none;
   margin-top: 10px;
-  border-radius: 4px;
   -webkit-appearance: none;
+  border-radius: var(--borderRadius);
   background-color: var(--checkboxColor);
 }
 .optionRange::-webkit-slider-thumb {
@@ -129,7 +161,7 @@ body, input, button {
   height: 30px;
   border: none;
   cursor: pointer;
-  border-radius: 4px;
   -webkit-appearance: none;
+  border-radius: var(--borderRadius);
   background-color: var(--checkboxSelectedColor);
 }
