--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
   --borderRadius: 4px;
 }
 
-
 body {
   margin: 0;
   color: var(--bodyTextColor);
@@ -166,6 +165,7 @@ body, input, button {
   line-height: 30px;
 }
 .optionRange {
+  margin: 0;
   width: 100%;
   height: 30px;
   font-size: 0;
